playscript-py/PlayScriptParser.py
# Generated from PlayScript.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class PlayScriptParser ( Parser ):

    grammarFileName = "PlayScript.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'boolean'", "'float'", "'int'", "'void'", 
                     "'string'", "'function'", "'class'", "'extends'", "'private'", 
                     "'protected'", "'public'", "'instanceof'", "'super'", 
                     "'this'", "'const'", "'static'", "'if'", "'else'", 
                     "'while'", "'for'", "'break'", "'continue'", "'return'", 
                     "'import'", "'new'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'null'", "'('", "')'", "'{'", 
                     "'}'", "'['", "']'", "';'", "','", "'.'", "'='", "'>'", 
                     "'<'", "'!'", "'?'", "':'", "'=='", "'<='", "'>='", 
                     "'!='", "'&&'", "'||'", "'++'", "'--'", "'+'", "'-'", 
                     "'*'", "'/'", "'%'", "'+='", "'-='", "'*='", "'/='", 
                     "'%='" ]

    symbolicNames = [ "<INVALID>", "BOOLEAN", "FLOAT", "INT", "VOID", "STRING", 
                      "FUNCTION", "CLASS", "EXTENDS", "PRIVATE", "PROTECTED", 
                      "PUBLIC", "INSTANCEOF", "SUPER", "THIS", "CONST", 
                      "STATIC", "IF", "ELSE", "WHILE", "FOR", "BREAK", "CONTINUE", 
                      "RETURN", "IMPORT", "NEW", "DECIMAL_LITERAL", "HEX_LITERAL", 
                      "FLOAT_LITERAL", "BOOL_LITERAL", "STRING_LITERAL", 
                      "NULL_LITERAL", "LPAREN", "RPAREN", "LBRACE", "RBRACE", 
                      "LBRACK", "RBRACK", "SEMI", "COMMA", "DOT", "ASSIGN", 
                      "GT", "LT", "BANG", "QUESTION", "COLON", "EQUAL", 
                      "LE", "GE", "NOTEQUAL", "AND", "OR", "INC", "DEC", 
                      "ADD", "SUB", "MUL", "DIV", "MOD", "ADD_ASSIGN", "SUB_ASSIGN", 
                      "MUL_ASSIGN", "DIV_ASSIGN", "MOD_ASSIGN", "WS", "COMMENT", 
                      "LINE_COMMENT", "IDENTIFIER" ]

    RULE_classDeclaration = 0
    RULE_classBody = 1
    RULE_classBodyDeclaration = 2
    RULE_memberDeclaration = 3
    RULE_functionDeclaration = 4
    RULE_functionBody = 5
    RULE_typeTypeOrVoid = 6
    RULE_qualifiedNameList = 7
    RULE_formalParameters = 8
    RULE_formalParameterList = 9
    RULE_formalParameter = 10
    RULE_variableModifier = 11
    RULE_qualifiedName = 12
    RULE_fieldDeclaration = 13
    RULE_variableDeclarators = 14
    RULE_variableDeclarator = 15
    RULE_variableDeclaratorId = 16
    RULE_variableInitializer = 17
    RULE_arrayInitializer = 18
    RULE_classType = 19
    RULE_literal = 20
    RULE_integerLiteral = 21
    RULE_floatLiteral = 22
    RULE_prog = 23
    RULE_block = 24
    RULE_blockStatements = 25
    RULE_blockStatement = 26
    RULE_statement = 27
    RULE_forControl = 28
    RULE_forInit = 29
    RULE_enhancedForControl = 30
    RULE_parExpression = 31
    RULE_expressionList = 32
    RULE_functionCall = 33
    RULE_expression = 34
    RULE_primary = 35
    RULE_typeList = 36
    RULE_typeType = 37
    RULE_functionType = 38
    RULE_primitiveType = 39

    ruleNames =  [ "classDeclaration", "classBody", "classBodyDeclaration", 
                   "memberDeclaration", "functionDeclaration", "functionBody", 
                   "typeTypeOrVoid", "qualifiedNameList", "formalParameters", 
                   "formalParameterList", "formalParameter", "variableModifier", 
                   "qualifiedName", "fieldDeclaration", "variableDeclarators", 
                   "variableDeclarator", "variableDeclaratorId", "variableInitializer", 
                   "arrayInitializer", "classType", "literal", "integerLiteral", 
                   "floatLiteral", "prog", "block", "blockStatements", "blockStatement", 
                   "statement", "forControl", "forInit", "enhancedForControl", 
                   "parExpression", "expressionList", "functionCall", "expression", 
                   "primary", "typeList", "typeType", "functionType", "primitiveType" ]

    EOF = Token.EOF
    BOOLEAN=1
    FLOAT=2
    INT=3
    VOID=4
    STRING=5
    FUNCTION=6
    CLASS=7
    EXTENDS=8
    PRIVATE=9
    PROTECTED=10
    PUBLIC=11
    INSTANCEOF=12
    SUPER=13
    THIS=14
    CONST=15
    STATIC=16
    IF=17
    ELSE=18
    WHILE=19
    FOR=20
    BREAK=21
    CONTINUE=22
    RETURN=23
    IMPORT=24
    NEW=25
    DECIMAL_LITERAL=26
    HEX_LITERAL=27
    FLOAT_LITERAL=28
    BOOL_LITERAL=29
    STRING_LITERAL=30
    NULL_LITERAL=31
    LPAREN=32
    RPAREN=33
    LBRACE=34
    RBRACE=35
    LBRACK=36
    RBRACK=37
    SEMI=38
    COMMA=39
    DOT=40
    ASSIGN=41
    GT=42
    LT=43
    BANG=44
    QUESTION=45
    COLON=46
    EQUAL=47
    LE=48
    GE=49
    NOTEQUAL=50
    AND=51
    OR=52
    INC=53
    DEC=54
    ADD=55
    SUB=56
    MUL=57
    DIV=58
    MOD=59
    ADD_ASSIGN=60
    SUB_ASSIGN=61
    MUL_ASSIGN=62
    DIV_ASSIGN=63
    MOD_ASSIGN=64
    WS=65
    COMMENT=66
    LINE_COMMENT=67
    IDENTIFIER=68

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ClassDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(PlayScriptParser.CLASS, 0)

        def IDENTIFIER(self):
            return self.getToken(PlayScriptParser.IDENTIFIER, 0)

        def classBody(self):
            return self.getTypedRuleContext(PlayScriptParser.ClassBodyContext,0)


        def EXTENDS(self):
            return self.getToken(PlayScriptParser.EXTENDS, 0)

        def typeType(self):
            return self.getTypedRuleContext(PlayScriptParser.TypeTypeContext,0)


        def getRuleIndex(self):
            return PlayScriptParser.RULE_classDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassDeclaration" ):
                listener.enterClassDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassDeclaration" ):
                listener.exitClassDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassDeclaration" ):
                return visitor.visitClassDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def classDeclaration(self):

        localctx = PlayScriptParser.ClassDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_classDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self.match(PlayScriptParser.CLASS)
            self.state = 81
            self.match(PlayScriptParser.IDENTIFIER)
            self.state = 84
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==PlayScriptParser.EXTENDS:
                self.state = 82
                self.match(PlayScriptParser.EXTENDS)
                self.state = 83
                self.typeType()


            self.state = 86
            self.classBody()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassBodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(PlayScriptParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(PlayScriptParser.RBRACE, 0)

        def classBodyDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PlayScriptParser.ClassBodyDeclarationContext)
            else:
                return self.getTypedRuleContext(PlayScriptParser.ClassBodyDeclarationContext,i)


        def getRuleIndex(self):
            return PlayScriptParser.RULE_classBody

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassBody" ):
                listener.enterClassBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassBody" ):
                listener.exitClassBody(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassBody" ):
                return visitor.visitClassBody(self)
            else:
                return visitor.visitChildren(self)




    def classBody(self):

        localctx = PlayScriptParser.ClassBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_classBody)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.match(PlayScriptParser.LBRACE)
            self.state = 92
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << PlayScriptParser.BOOLEAN) | (1 << PlayScriptParser.FLOAT) | (1 << PlayScriptParser.INT) | (1 << PlayScriptParser.VOID) | (1 << PlayScriptParser.STRING) | (1 << PlayScriptParser.FUNCTION) | (1 << PlayScriptParser.CLASS) | (1 << PlayScriptParser.CONST) | (1 << PlayScriptParser.STATIC) | (1 << PlayScriptParser.SEMI))) != 0) or _la==PlayScriptParser.IDENTIFIER:
                self.state = 89
                self.classBodyDeclaration()
                self.state = 94
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 95
            self.match(PlayScriptParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassBodyDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SEMI(self):
            return self.getToken(PlayScriptParser.SEMI, 0)

        def memberDeclaration(self):
            return self.getTypedRuleContext(PlayScriptParser.MemberDeclarationContext,0)


        def getRuleIndex(self):
            return PlayScriptParser.RULE_classBodyDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassBodyDeclaration" ):
                listener.enterClassBodyDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassBodyDeclaration" ):
                listener.exitClassBodyDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassBodyDeclaration" ):
                return visitor.visitClassBodyDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def classBodyDeclaration(self):

        localctx = PlayScriptParser.ClassBodyDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_classBodyDeclaration)
        try:
            self.state = 99
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PlayScriptParser.SEMI]:
                self.enterOuterAlt(localctx, 1)
                self.state = 97
                self.match(PlayScriptParser.SEMI)
                pass
            elif token in [PlayScriptParser.BOOLEAN, PlayScriptParser.FLOAT, PlayScriptParser.INT, PlayScriptParser.VOID, PlayScriptParser.STRING, PlayScriptParser.FUNCTION, PlayScriptParser.CLASS, PlayScriptParser.CONST, PlayScriptParser.STATIC, PlayScriptParser.IDENTIFIER]:
                self.enterOuterAlt(localctx, 2)
                self.state = 98
                self.memberDeclaration()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MemberDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def functionDeclaration(self):
            return self.getTypedRuleContext(PlayScriptParser.FunctionDeclarationContext,0)


        def fieldDeclaration(self):
            return self.getTypedRuleContext(PlayScriptParser.FieldDeclarationContext,0)


        def classDeclaration(self):
            return self.getTypedRuleContext(PlayScriptParser.ClassDeclarationContext,0)


        def getRuleIndex(self):
            return PlayScriptParser.RULE_memberDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMemberDeclaration" ):
                listener.enterMemberDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMemberDeclaration" ):
                listener.exitMemberDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMemberDeclaration" ):
                return visitor.visitMemberDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def memberDeclaration(self):

        localctx = PlayScriptParser.MemberDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_memberDeclaration)
        try:
            self.state = 104
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 101
                self.functionDeclaration()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 102
                self.fieldDeclaration()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 103
                self.classDeclaration()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(PlayScriptParser.IDENTIFIER, 0)

        def formalParameters(self):
            return self.getTypedRuleContext(PlayScriptParser.FormalParametersContext,0)


        def functionBody(self):
            return self.getTypedRuleContext(PlayScriptParser.FunctionBodyContext,0)


        def typeTypeOrVoid(self):
            return self.getTypedRuleContext(PlayScriptParser.TypeTypeOrVoidContext,0)


        def getRuleIndex(self):
            return PlayScriptParser.RULE_functionDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionDeclaration" ):
                listener.enterFunctionDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionDeclaration" ):
                listener.exitFunctionDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionDeclaration" ):
                return visitor.visitFunctionDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def functionDeclaration(self):

        localctx = PlayScriptParser.FunctionDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_functionDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 106
                self.typeTypeOrVoid()


            self.state = 109
            self.match(PlayScriptParser.IDENTIFIER)
            self.state = 110
            self.formalParameters()
            self.state = 111
            self.functionBody()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionBodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block(self):
            return self.getTypedRuleContext(PlayScriptParser.BlockContext,0)


        def SEMI(self):
            return self.getToken(PlayScriptParser.SEMI, 0)

        def getRuleIndex(self):
            return PlayScriptParser.RULE_functionBody

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionBody" ):
                listener.enterFunctionBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionBody" ):
                listener.exitFunctionBody(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionBody" ):
                return visitor.visitFunctionBody(self)
            else:
                return visitor.visitChildren(self)




    def functionBody(self):

        localctx = PlayScriptParser.FunctionBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_functionBody)
        try:
            self.state = 115
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PlayScriptParser.LBRACE]:
                self.enterOuterAlt(localctx, 1)
                self.state = 113
                self.block()
                pass
            elif token in [PlayScriptParser.SEMI]:
                self.enterOuterAlt(localctx, 2)
                self.state = 114
                self.match(PlayScriptParser.SEMI)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeTypeOrVoidContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeType(self):
            return self.getTypedRuleContext(PlayScriptParser.TypeTypeContext,0)


        def VOID(self):
            return self.getToken(PlayScriptParser.VOID, 0)

        def getRuleIndex(self):
            return PlayScriptParser.RULE_typeTypeOrVoid

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypeTypeOrVoid" ):
                listener.enterTypeTypeOrVoid(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypeTypeOrVoid" ):
                listener.exitTypeTypeOrVoid(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypeTypeOrVoid" ):
                return visitor.visitTypeTypeOrVoid(self)
            else:
                return visitor.visitChildren(self)




    def typeTypeOrVoid(self):

        localctx = PlayScriptParser.TypeTypeOrVoidContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_typeTypeOrVoid)
        try:
            self.state = 119
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PlayScriptParser.BOOLEAN, PlayScriptParser.FLOAT, PlayScriptParser.INT, PlayScriptParser.STRING, PlayScriptParser.FUNCTION, PlayScriptParser.IDENTIFIER]:
                self.enterOuterAlt(localctx, 1)
                self.state = 117
                self.typeType()
                pass
            elif token in [PlayScriptParser.VOID]:
                self.enterOuterAlt(localctx, 2)
                self.state = 118
                self.match(PlayScriptParser.VOID)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class QualifiedNameListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def qualifiedName(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PlayScriptParser.QualifiedNameContext)
            else:
                return self.getTypedRuleContext(PlayScriptParser.QualifiedNameContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(PlayScriptParser.COMMA)
            else:
                return self.getToken(PlayScriptParser.COMMA, i)

        def getRuleIndex(self):
            return PlayScriptParser.RULE_qualifiedNameList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQualifiedNameList" ):
                listener.enterQualifiedNameList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQualifiedNameList" ):
                listener.exitQualifiedNameList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitQualifiedNameList" ):
                return visitor.visitQualifiedNameList(self)
            else:
                return visitor.visitChildren(self)




    def qualifiedNameList(self):

        localctx = PlayScriptParser.QualifiedNameListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_qualifiedNameList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.qualifiedName()
            self.state = 126
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==PlayScriptParser.COMMA:
                self.state = 122
                self.match(PlayScriptParser.COMMA)
                self.state = 123
                self.qualifiedName()
                self.state = 128
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FormalParametersContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPAREN(self):
            return self.getToken(PlayScriptParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(PlayScriptParser.RPAREN, 0)

        def formalParameterList(self):
            return self.getTypedRuleContext(PlayScriptParser.FormalParameterListContext,0)


        def getRuleIndex(self):
            return PlayScriptParser.RULE_formalParameters

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFormalParameters" ):
                listener.enterFormalParameters(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFormalParameters" ):
                listener.exitFormalParameters(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFormalParameters" ):
                return visitor.visitFormalParameters(self)
            else:
                return visitor.visitChildren(self)




    def formalParameters(self):
